--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/postgres_dba
     docker:
-      - image: circleci/ruby:2.4.1-node
+      - image: postgresmen/pg96:v1
         environment:
           - PGHOST: 127.0.0.1
           - PGUSER: root
